[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-id-exporter"
version = "0.3.0"
description = "Prometheus exporter for Pocket-ID audit logs and SSO data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "prometheus-client==0.22.1",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
pocket-id-exporter = "pocket_id_exporter.__main__:main"

[tool.setuptools.packages.find]
include = ["pocket_id_exporter*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
